--- a/estilos.css
+++ b/estilos.css
@@ -1,2 +1,102 @@
-/*   font-family: 'Righteous', cursive;
-font-family: 'Roboto', sans-serif;      */
+@media (max-width: 414px){
+body{
+    margin:0;
+    width: 0 auto;
+    background-color: #E5E5E5;
+    }
+.topo{
+    background-color: #CF2B2B;
+    width: 100%;
+    height: 92px;
+    
+}
+.driveneats{
+    color: #FFFFFF;
+    font-family: 'Righteous', cursive; 
+    font-size: 44px;
+    width: 248px;
+    height: 44px;
+    padding-top: 8px;
+    margin-left: 18px;
+    margin-bottom: 5px;
+
+}
+.seisminutos{
+    color: #FFFFFF;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin-left: 0px;
+    width: 226px;
+    margin-left: 21px;
+    margin-bottom:8px;
+   
+}
+.escolha1{
+    font-family: 'Righteous', cursive;
+    color: #333333;
+    width: 100%;
+    width: 250px;
+    height: 25px;
+    margin-top: 31px;
+    margin-left: 19px;
+    margin-bottom: 17px;
+    font-size: 26px;
+    font-weight: 400;
+
+}
+
+.displayblocos{
+    width: 100%;
+    display: flex;
+    overflow-x: scroll;
+}
+.blocodeescolha{
+    width: 100%;
+    background-color: #FFFFFF;
+    margin-left: 17.5px;
+    font-family: 'Roboto', sans-serif;
+    width: 172px;
+    height: 216px;
+    border-radius: 9px;
+
+}
+.img {
+    margin-top: 18px;
+    margin-left: 14px;
+    width: 144px;
+    height: 87px;
+}
+.texto1{
+   
+    color: #333333;
+    width: 139px;
+    height: 23px;
+    margin-top: 8px;
+    margin-right: 18px;
+    margin-bottom: 4px;
+    margin-left: 15px;
+    font-size: 16px;
+    font-weight: 700;
+}
+.texto2{
+    color: #A6A6A6;
+    width: 147px;
+    height: 39px;
+    font-size: 15px;
+    font-weight: 300;
+
+    margin-right: 11px;
+    margin-bottom: 5px;
+    margin-left: 14px;
+}
+.textosobremesa{
+    width: 320px; 
+}
+.preco{
+    width: 66px;
+    height: 19px;
+    margin-left: 14px;
+}
+
+}
