--- a/estilos.css
+++ b/estilos.css
@@ -14,6 +14,7 @@ body{
     background-color: #CF2B2B;
     width: 100%;
     height: 92px;
+    box-shadow: 0px 5px 5px #9d9c9c;
     
 }
 .driveneats{
@@ -46,13 +47,12 @@ body{
     height: 25px;
     margin-top: 31px;
     margin-left: 19px;
-    margin-bottom: 17px;
     font-size: 26px;
     font-weight: 400;
 
 }
 .seuprato{
-    margin-top: 92px;
+    margin-top: 123px;
 }
 
 .displayblocos{
@@ -60,6 +60,8 @@ body{
     width: 100%;
     display: flex;
     overflow-x: scroll;
+    
+    
 }
 .blocodeescolha{
     width: 100%;
@@ -67,10 +69,18 @@ body{
     margin-left: 17.5px;
     margin-bottom: 16px;
     font-family: 'Roboto', sans-serif;
-    width: 172px;
+    width: 170px;
     height: 216px;
     border-radius: 9px;
+    margin-top: 17px;
+    
+    box-shadow:inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.3), 1px 2px 7px 3px #9d9c9c;
 
+}
+.margemamais{
+    margin-right: 17.5px;
 }
 .img {
     margin-top: 18px;
@@ -96,7 +106,6 @@ body{
     height: 39px;
     font-size: 15px;
     font-weight: 300;
-
     margin-right: 11px;
     margin-bottom: 5px;
     margin-left: 14px;
@@ -105,9 +114,14 @@ body{
     width: 320px; 
 }
 .preco{
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    
     width: 66px;
     height: 19px;
     margin-left: 14px;
+    font-weight: 500;
+   
 }
 .blocobotao{
     position: fixed;
