--- a/estilos.css
+++ b/estilos.css
@@ -32,12 +32,11 @@ body{
     color: #FFFFFF;
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
     margin-left: 0px;
     width: 226px;
     margin-left: 21px;
     margin-bottom:8px;
-   
+    font-weight: 400;
 }
 .escolha1{
     font-family: 'Righteous', cursive;
@@ -45,7 +44,7 @@ body{
     width: 100%;
     width: 250px;
     height: 25px;
-    margin-top: 31px;
+   
     margin-left: 19px;
     font-size: 26px;
     font-weight: 400;
@@ -60,39 +59,43 @@ body{
     width: 100%;
     display: flex;
     overflow-x: scroll;
-    
-    
 }
 .blocodeescolha{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     background-color: #FFFFFF;
     margin-left: 17.5px;
-    margin-bottom: 16px;
+    margin-bottom: 31px;
     font-family: 'Roboto', sans-serif;
     width: 170px;
     height: 216px;
     border-radius: 9px;
     margin-top: 17px;
+    box-shadow: 1px 2px 7px 3px #9d9c9c;
+    border-radius: 9px;
+    border-width: 5px;
     
-    box-shadow:inset 0 -3em 3em rgba(0,0,0,0.1),
-    0 0  0 2px rgb(255,255,255),
-    0.3em 0.3em 1em rgba(0,0,0,0.3), 1px 2px 7px 3px #9d9c9c;
-
 }
 .margemamais{
     margin-right: 17.5px;
 }
 .img {
-    margin-top: 18px;
-    margin-left: 14px;
+    padding-top: 14px;
     width: 144px;
     height: 87px;
+}
+.displayimg{
+    display: flex;
+    justify-content: center;
 }
 .texto1{
    
     color: #333333;
     width: 139px;
-    height: 23px;
+    height: 18px;
     margin-top: 8px;
     margin-right: 18px;
     margin-bottom: 4px;
@@ -100,7 +103,8 @@ body{
     font-size: 16px;
     font-weight: 700;
 }
-.texto2{
+.texto2{display: flex;
+    align-items: center;
     color: #A6A6A6;
     width: 147px;
     height: 39px;
@@ -114,12 +118,15 @@ body{
     width: 320px; 
 }
 .preco{
+    display: flex;
+    align-items: center;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    
     width: 66px;
-    height: 19px;
+    height: 16px;
     margin-left: 14px;
+    margin-right: 90px;
+    margin-bottom: 16px;
     font-weight: 500;
    
 }
@@ -133,6 +140,7 @@ body{
     align-items: center;
     width: 100%;
     height: 92px;
+    
 }
 .caixabotao{
     font-family: 'Roboto', sans-serif;
@@ -149,5 +157,20 @@ body{
 .ultimobloco{
     margin-bottom: 92px;
 }
+.bordaverde{
+    width: 170px;
+    height: 216px;
+    border-radius: 9px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #32B72F;
+    box-sizing: border-box;
 
+}
+.escondido{
+    display: none;
+}
+.pedidofechado{
+    background-color: #32B72F;
+}
 }
